--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -1,6 +1,6 @@
 <p style="color: green"><%= notice %></p>
 
-<div class="flex items-center justify-between flex-wrap">
+<div class="flex items-center justify-between flex-wrap mb-16">
   <div class="flex flex-wrap my-12 items-center">
       <%= link_to events_path(current_view: "today"), data: { turbo: false } do %>
         <h1 class="font-bold text-4xl text-blue-500">Kalender</h1>
@@ -12,37 +12,57 @@
     <% end %>
   </div>
 
-  <div>
-    <%= link_to events_path(current_view: "today"), data: { turbo: false } do %>
-      <button class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-3 px-3 rounded" title="Ansicht heute">
-        <span class="material-symbols-outlined inline-block align-middle">calendar_today</span>
-      </button>
+  <div class="grid grid-cols-1 gap-2">
+    <div>
+      <%= link_to events_path(current_view: "today"), data: { turbo: false } do %>
+        <button class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-3 px-3 rounded" title="Ansicht heute">
+          <span class="material-symbols-outlined inline-block align-middle">calendar_today</span>
+        </button>
+      <% end %>
+      <%= link_to events_path(current_view: "this_week"), data: { turbo: false } do %>
+      <button class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-3 px-3 rounded" title="Ansicht diese Woche">
+          <span class="material-symbols-outlined inline-block align-middle">calendar_view_week</span>
+        </button>
+      <% end %>
+      <%= link_to events_path(current_view: "this_month"), data: { turbo: false } do %>
+        <button class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-3 px-3 rounded" title="Ansicht dieser Monat">
+          <span class="material-symbols-outlined inline-block align-middle">calendar_month</span>
+        </button>
+      <% end %>
+      <%= link_to events_path(current_view: "this_year"), data: { turbo: false } do %>
+        <button class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-3 px-3 rounded" title="Ansicht dieses Jahr">
+          <p class="inline-block align-middle"><%= Date.today.year %></p>
+        </button>
+      <% end %>
+      <%= link_to reschedule_past_events_path, data: { turbo: false } do %>
+        <button class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-3 px-3 rounded" title="Reschedule Past Events">
+          <span class="material-symbols-outlined inline-block align-middle">history</span>
+        </button>
+      <% end %>  
+      <%= link_to export_events_to_csv_path(format: 'csv'), data: { turbo: false } do %>
+        <button class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-3 px-3 rounded" title="Export Events to CSV">
+          <span class="material-symbols-outlined inline-block align-middle">csv</span>
+        </button>
+      <% end %>
+    </div>
+    <div>
+      <%= link_to reschedule_events_path(sort_by: "priority"), data: { turbo: false }, class: "mr-2" do %>
+        <button class="bg-red-500 hover:bg-red-700 text-white font-bold py-3 px-3 rounded" title="Reschedule by Priority">
+          <span class="material-symbols-outlined inline-block align-middle">autorenew</span>
+        </button>
+      <% end %> 
+      Reschedule by Priority
+    </div>
+    <% if false %>
+      <div>
+        <%= link_to reschedule_events_path(sort_by: "duration"), data: { turbo: false }, class: "mr-2" do %>
+          <button class="bg-green-500 hover:bg-green-700 text-white font-bold py-3 px-3 rounded" title="Reschedule by Duration">
+            <span class="material-symbols-outlined inline-block align-middle">autorenew</span>
+          </button>
+        <% end %>
+        Reschedule by Duration 
+      </div>
     <% end %>
-    <%= link_to events_path(current_view: "this_week"), data: { turbo: false } do %>
-     <button class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-3 px-3 rounded" title="Ansicht diese Woche">
-        <span class="material-symbols-outlined inline-block align-middle">calendar_view_week</span>
-      </button>
-    <% end %>
-    <%= link_to events_path(current_view: "this_month"), data: { turbo: false } do %>
-      <button class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-3 px-3 rounded" title="Ansicht dieser Monat">
-        <span class="material-symbols-outlined inline-block align-middle">calendar_month</span>
-      </button>
-    <% end %>
-    <%= link_to events_path(current_view: "this_year"), data: { turbo: false } do %>
-      <button class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-3 px-3 rounded" title="Ansicht dieses Jahr">
-        <p class="inline-block align-middle"><%= Date.today.year %></p>
-      </button>
-    <% end %>
-    <%= link_to reschedule_past_events_path, data: { turbo: false } do %>
-      <button class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-3 px-3 rounded" title="Reschedule Past Events">
-        <span class="material-symbols-outlined inline-block align-middle">autorenew</span>
-      </button>
-    <% end %> 
-    <%= link_to export_events_to_csv_path(format: 'csv'), data: { turbo: false } do %>
-      <button class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-3 px-3 rounded" title="Export Events to CSV">
-        <span class="material-symbols-outlined inline-block align-middle">csv</span>
-      </button>
-    <% end %> 
   </div>
 </div>
 
