--- a/app/views/events/_event.html.erb
+++ b/app/views/events/_event.html.erb
@@ -28,7 +28,7 @@
     </p>
   </td>
 
-    <td class="border-b border-slate-100 dark:border-slate-700 p-4 text-slate-500 dark:text-slate-400">
+  <td class="border-b border-slate-100 dark:border-slate-700 p-4 text-slate-500 dark:text-slate-400">
     <p class="text-base text-black  <%= event.kind == 'blocking' ? 'text-opacity-25' : '' %>">
       <%= fallback_value(event, :priority) %>
     </p>
@@ -37,6 +37,12 @@
   <td class="border-b border-slate-100 dark:border-slate-700 p-4 text-slate-500 dark:text-slate-400">
     <p class="text-base text-black  <%= event.kind == 'blocking' ? 'text-opacity-25' : '' %>">
       <%= event.fixed %>
+    </p>
+  </td>
+
+  <td class="border-b border-slate-100 dark:border-slate-700 p-4 text-slate-500 dark:text-slate-400">
+    <p class="text-base text-black  <%= event.kind == 'blocking' ? 'text-opacity-25' : '' %>">
+      <%= fallback_value(event, :project) %>
     </p>
   </td>
 </div>
