--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -22,10 +22,17 @@
         <%= form.text_field :kind, class: "appearance-none block bg-gray-200 text-gray-700 border rounded py-3 px-4 mb-2 leading-tight focus:outline-none focus:bg-white" %>
       </div>
       <div class="px-3 mb-2">
+        <%= form.label :project, style: "display: block", class: "block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2" %>
+        <%= form.text_field :project, class: "appearance-none block bg-gray-200 text-gray-700 border rounded py-3 px-4 mb-2 leading-tight focus:outline-none focus:bg-white" %>
+      </div>
+      <% unless @project_names.blank? %>
+        <p class="px-3 mb-2">List of Projects: <%= @project_names %></p>
+      <% end %>
+      <div class="px-3 mb-2">
         <%= form.label :description, style: "display: block", class: "block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2" %>
         <%= form.text_area :description, style: "width:500px;height:250px", class: "appearance-none block bg-gray-200 text-gray-700 border rounded py-3 px-4 mb-2 leading-tight focus:outline-none focus:bg-white" %>
       </div>
-      <div class="flex  items-center">
+      <div class="flex items-center">
         <div class="px-3 mb-2">
           <%= form.label :date, "START DATE", class: "block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2"  %>
           <%= form.date_field :date, value: params[:date_from_today_view] || event.start_time&.strftime('%Y-%m-%d') || nil, class: "appearance-none block bg-gray-200 text-gray-700 border rounded py-3 px-4 mb-2 leading-tight focus:outline-none focus:bg-white" %>
