--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -11,14 +11,14 @@
   </div>
 
   <div class="grid grid-cols-1 gap-2">
-    <div>
+    <div class="flex justify-end space-x-1">
       <%= link_to events_path(current_view: "today"), data: { turbo: false } do %>
         <button class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-3 px-3 rounded" title="Ansicht heute">
           <span class="material-symbols-outlined inline-block align-middle">calendar_today</span>
         </button>
       <% end %>
       <%= link_to events_path(current_view: "this_week"), data: { turbo: false } do %>
-      <button class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-3 px-3 rounded" title="Ansicht diese Woche">
+        <button class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-3 px-3 rounded" title="Ansicht diese Woche">
           <span class="material-symbols-outlined inline-block align-middle">calendar_view_week</span>
         </button>
       <% end %>
@@ -43,7 +43,9 @@
         </button>
       <% end %>
     </div>
-    <div>
+    <%
+=begin%>
+ <div>
       <%= link_to reschedule_events_path(sort_by: "priority"), data: { turbo: false }, class: "mr-2" do %>
         <button class="bg-red-500 hover:bg-red-700 text-white font-bold py-3 px-3 rounded" title="Reschedule by Priority">
           <span class="material-symbols-outlined inline-block align-middle">autorenew</span>
@@ -51,14 +53,33 @@
       <% end %> 
       Reschedule by Priority
     </div>
-      <div>
-        <%= link_to reschedule_events_path(sort_by: "duration"), data: { turbo: false }, class: "mr-2" do %>
-          <button class="bg-green-500 hover:bg-green-700 text-white font-bold py-3 px-3 rounded" title="Reschedule by Duration">
-            <span class="material-symbols-outlined inline-block align-middle">autorenew</span>
-          </button>
-        <% end %>
-        Reschedule by Duration 
-      </div>
+    <div>
+      <%= link_to reschedule_events_path(sort_by: "duration"), data: { turbo: false }, class: "mr-2" do %>
+        <button class="bg-green-500 hover:bg-green-700 text-white font-bold py-3 px-3 rounded" title="Reschedule by Duration">
+          <span class="material-symbols-outlined inline-block align-middle">autorenew</span>
+        </button>
+      <% end %>
+      Reschedule by Duration 
+    </div> 
+<%
+=end%>
+    <div>
+      <%= form_with(mode: Event, url: reschedule_events_path, method: :get) do |form| %>
+        <div class="flex mt-2">
+          <div class="mr-2">
+            <%= form.label "PROJECT (OPTIONAL)", style: "display: block", class: "block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2" %>
+            <%= form.select :project, Event.project_names.unshift("none"), { selected: "Default" }, class: "appearance-none block bg-gray-200 text-gray-700 border rounded py-3 px-4 mb-2 leading-tight focus:outline-none focus:bg-white", style: "width:200px" %>
+          </div>
+          <div class="mr-2">
+            <%= form.label :sort_by, style: "display: block", class: "block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2" %>
+            <%= form.select :sort_by, ["priority", "duration"], { selected: "priority" }, class: "appearance-none block bg-gray-200 text-gray-700 border rounded py-3 px-4 mb-2 leading-tight focus:outline-none focus:bg-white", style: "width:150px" %>
+          </div>
+          <div class="pb-2 pt-6">
+            <%= form.submit "Reschedule Events", class: "h-full cursor-pointer bg-transparent hover:bg-blue-500 text-blue-500 font-semibold hover:text-white py-2 px-4 border border-blue-500 hover:border-transparent rounded" %>
+          </div>
+        </div>
+      <% end %>
+    </div>
   </div>
 </div>
 
