--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -58,7 +58,7 @@
       <% if params[:action] == "new" %>
         <div class="px-3 mb-2">
           <%= form.label :recurrence, style: "display: block", class: "block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2" %>
-          <%= form.select :recurrence, Event.recurrences.keys.map { |recurrence| [recurrence.titleize, recurrence] }, class: "appearance-none block bg-gray-200 text-gray-700 border rounded py-3 px-4 mb-2 leading-tight focus:outline-none focus:bg-white" %>
+          <%= form.select :recurrence, Event.recurrences.keys.map { |recurrence| [recurrence.titleize, recurrence] }, {},  class: "appearance-none block bg-gray-200 text-gray-700 border rounded py-3 px-4 mb-2 leading-tight focus:outline-none focus:bg-white" %>
         </div>
       <% end %>
       <div class="px-3 mb-2">
