--- a/app/views/events/_event.html.erb
+++ b/app/views/events/_event.html.erb
@@ -4,6 +4,9 @@
       <p class="mr-2 text-base text-black  <%= event.kind == 'blocking' ? 'text-opacity-25' : '' %>">
         <%= link_to event.title, event_path(event), class: "underline" %>
       </p>
+      <p class="text-base text-black  <%= event.kind == 'blocking' ? 'text-opacity-25' : '' %>">
+        <%= link_to "Editieren", edit_event_path(event), class: "underline" %>
+      </p>
       <% if event.done == true %>
         <span class="material-symbols-outlined">check_circle</span>
       <% end %>
@@ -18,12 +21,6 @@
 
   <td class="border-b border-slate-100 dark:border-slate-700 p-4 text-slate-500 dark:text-slate-400">
     <p class="text-base text-black  <%= event.kind == 'blocking' ? 'text-opacity-25' : '' %>">
-      <%= format_datetime(event.start_time, false) %> - <%= format_datetime(event.end_time, false) %> (<%= format_seconds_to_time(event.duration) %>)
-    </p>
-  </td>
-
-  <td class="border-b border-slate-100 dark:border-slate-700 p-4 text-slate-500 dark:text-slate-400">
-    <p class="text-base text-black  <%= event.kind == 'blocking' ? 'text-opacity-25' : '' %>">
       <%= fallback_value(event, :priority) %>
     </p>
   </td>
@@ -31,6 +28,12 @@
   <td class="border-b border-slate-100 dark:border-slate-700 p-4 text-slate-500 dark:text-slate-400">
     <p class="text-base text-black  <%= event.kind == 'blocking' ? 'text-opacity-25' : '' %>">
       <%= fallback_value(event, :project) %>
+    </p>
+  </td>
+
+  <td class="border-b border-slate-100 dark:border-slate-700 p-4 text-slate-500 dark:text-slate-400">
+    <p class="text-base text-black  <%= event.kind == 'blocking' ? 'text-opacity-25' : '' %>">
+      <%= format_datetime(event.start_time, false) %> - <%= format_datetime(event.end_time, false) %> (<%= format_seconds_to_time(event.duration) %>)
     </p>
   </td>
 </div>
