--- a/app/views/events/_event.html.erb
+++ b/app/views/events/_event.html.erb
@@ -1,17 +1,21 @@
 <div id="<%= dom_id event %>">
   <td class="border-b border-slate-100 dark:border-slate-700 p-4 pl-8 text-slate-500 dark:text-slate-400">
     <div class="flex">
-      <p class="mr-2 text-base text-black  <%= event.kind == 'blocking' ? 'text-opacity-25' : '' %>">
-        <%= link_to event.title, event_path(event), class: "underline" %>
-      </p>
-      <p class="text-base text-black  <%= event.kind == 'blocking' ? 'text-opacity-25' : '' %>">
-        <%= link_to edit_event_path(event) do %>
-          <span class="material-symbols-outlined">edit</span>
+      <div class="w-3/4">
+        <p class="mr-2 text-base text-black  <%= event.kind == 'blocking' ? 'text-opacity-25' : '' %> ">
+          <%= link_to event.title, event_path(event), class: "underline" %>
+        </p>
+      </div>
+      <div class="w-1/4">
+        <% if event.done == true %>
+          <span class="material-symbols-outlined">check_circle</span>
         <% end %>
-      </p>
-      <% if event.done == true %>
-        <span class="material-symbols-outlined">check_circle</span>
-      <% end %>
+        <p class="text-base text-black  <%= event.kind == 'blocking' ? 'text-opacity-25' : '' %> text-end">
+          <%= link_to edit_event_path(event) do %>
+            <span class="material-symbols-outlined">edit</span>
+          <% end %>
+        </p>
+      </div>
     </div>
   </td>
 
