--- a/app/views/events/_event.html.erb
+++ b/app/views/events/_event.html.erb
@@ -14,6 +14,9 @@
           <%= link_to edit_event_path(event) do %>
             <span class="material-symbols-outlined">edit</span>
           <% end %>
+          <%= link_to event_path(event), data: { "turbo-method": :delete, "turbo-confirm": "Are you sure you want to delete this event?" } do %>
+            <span class="material-symbols-outlined">delete</span>
+          <% end %>
         </p>
       </div>
     </div>
