--- a/app/views/events/_event.html.erb
+++ b/app/views/events/_event.html.erb
@@ -22,9 +22,9 @@
     </div>
   </td>
 
-  <td class="border-b border-slate-100 dark:border-slate-700 p-4 text-slate-500 dark:text-slate-400">
+  <td class="border-b border-slate-100 dark:border-slate-700 p-4 text-slate-500 dark:text-slate-400 break-all">
     <p class="text-base text-black  <%= event.kind == 'blocking' ? 'text-opacity-25' : '' %>">
-      <%= fallback_value(event, :description).truncate(250) %>
+      <%= simple_format(fallback_value(event, :description)) %>
     </p>
   </td>
 
