--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -30,7 +30,7 @@
 
           <td class="border-b border-slate-100 dark:border-slate-700 p-4 text-slate-500 dark:text-slate-400">
             <p>
-              <%= fallback_value(@event, :description) %>
+              <%= simple_format(fallback_value(@event, :description)) %>
             </p>
           </td>
 
