--- a/app/views/events/_event.html.erb
+++ b/app/views/events/_event.html.erb
@@ -24,21 +24,44 @@
 
   <td class="border-b border-slate-100 dark:border-slate-700 p-4 text-slate-500 dark:text-slate-400 break-all w-1/2">
     <div class="bg-white rounded">
-    	<div id="accordion-flush" data-accordion="collapse" data-active-classes="bg-white dark:bg-gray-900 text-gray-900 dark:text-white" data-inactive-classes="text-gray-500 dark:text-gray-400">
-    		<h2 id="accordion-flush-heading-<%= event.id %>">
-    			<button type="button" class="flex justify-between items-center py-5 w-full text-left" data-accordion-target="#accordion-flush-body-<%= event.id %>" aria-expanded="false" aria-controls="accordion-flush-body-<%= event.id %>">
+  		<h2 id="accordion-flush-heading-<%= event.id %>">
+        <button
+        class="group relative flex w-full items-center rounded-t-lg border-0 bg-white py-4 text-left text-base text-neutral-800 transition [overflow-anchor:none] hover:z-[2] focus:z-[3] focus:outline-none dark:bg-body-dark dark:text-white [&:not([data-twe-collapse-collapsed])]:bg-white [&:not([data-twe-collapse-collapsed])]:text-primary [&:not([data-twe-collapse-collapsed])]:shadow-border-b dark:[&:not([data-twe-collapse-collapsed])]:bg-surface-dark dark:[&:not([data-twe-collapse-collapsed])]:text-primary dark:[&:not([data-twe-collapse-collapsed])]:shadow-white/10 "
+        type="button"
+        data-twe-collapse-init
+        data-twe-collapse-collapsed
+        data-twe-target="#collapse<%= event.id %>"
+        aria-expanded="false"
+        aria-controls="collapse<%= event.id %>">
           <%= fallback_value(event, :description).truncate(100) %>
-          <svg data-accordion-icon class="w-6 h-6 shrink-0" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M5.293 7.293a1 1 0 011.414 0L10 10.586l3.293-3.293a1 1 0 111.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414z" clip-rule="evenodd"></path></svg>
+          <span
+            class="-me-1 ms-auto h-5 w-5 shrink-0 rotate-[-180deg] transition-transform duration-200 ease-in-out group-data-[twe-collapse-collapsed]:me-0 group-data-[twe-collapse-collapsed]:rotate-0 motion-reduce:transition-none [&>svg]:h-6 [&>svg]:w-6">
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              fill="none"
+              viewBox="0 0 24 24"
+              stroke-width="1.5"
+              stroke="currentColor">
+              <path
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                d="M19.5 8.25l-7.5 7.5-7.5-7.5" />
+            </svg>
+          </span>
         </button>
-    		</h2>
-    		<div id="accordion-flush-body-<%= event.id %>" class="hidden" aria-labelledby="accordion-flush-heading-<%= event.id %>">
-          <div class="py-5">
-    				<p class="mb-2 text-gray-500 dark:text-gray-400">
-              <%= simple_format(fallback_value(event, :description)) %>
-            </p>
-    			</div>
-    		</div>
-    	</div>
+  		</h2>
+      <div
+      id="collapse<%= event.id %>"
+      class="!visible hidden"
+      data-twe-collapse-item
+      aria-labelledby="heading<%= event.id %>"
+      data-twe-parent="#eventAccordion">
+        <div class="py-5">
+  				<p class="mb-2 text-gray-500 dark:text-gray-400">
+            <%= simple_format(fallback_value(event, :description)) %>
+          </p>
+  			</div>
+  		</div>
     </div>
   </td>
 
