--- a/app/views/events/_event.html.erb
+++ b/app/views/events/_event.html.erb
@@ -7,17 +7,21 @@
         </p>
       </div>
       <div class="w-1/4">
-        <% if event.done == true %>
-          <span class="material-symbols-outlined">check_circle</span>
+        <% unless event.kind == "blocking" %>
+          <div class="flex justify-end">
+            <%= form_with(model: event, url: mark_as_done_path(event), method: :patch) do |form| %>
+              <%= button_tag(type: 'submit') do %>
+                <span class="material-symbols-outlined text-green-600">check_circle</span>
+              <% end %>
+            <% end %>
+            <%= link_to edit_event_path(event) do %>
+              <span class="material-symbols-outlined text-blue-600">edit</span>
+            <% end %>
+            <%= link_to event_path(event), data: { "turbo-method": :delete, "turbo-confirm": "Are you sure you want to delete this event?" } do %>
+              <span class="material-symbols-outlined text-red-600">delete</span>
+            <% end %>
+          </div>
         <% end %>
-        <p class="text-base text-black  <%= event.kind == 'blocking' ? 'text-opacity-25' : '' %> text-end">
-          <%= link_to edit_event_path(event) do %>
-            <span class="material-symbols-outlined">edit</span>
-          <% end %>
-          <%= link_to event_path(event), data: { "turbo-method": :delete, "turbo-confirm": "Are you sure you want to delete this event?" } do %>
-            <span class="material-symbols-outlined">delete</span>
-          <% end %>
-        </p>
       </div>
     </div>
   </td>
