add results field to task

--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -10,6 +10,7 @@
         <th class="border-b dark:border-slate-600 font-medium p-4 pt-0 pb-3 text-slate-400 dark:text-slate-200 text-left">Priority</th>
         <th class="border-b dark:border-slate-600 font-medium p-4 pt-0 pb-3 text-slate-400 dark:text-slate-200 text-left">Fixed</th>
         <th class="border-b dark:border-slate-600 font-medium p-4 pt-0 pb-3 text-slate-400 dark:text-slate-200 text-left">File Upload</th>
+        <th class="border-b dark:border-slate-600 font-medium p-4 pt-0 pb-3 text-slate-400 dark:text-slate-200 text-left">Ergebnis</th>
         <th class="border-b dark:border-slate-600 font-medium p-4 pt-0 pb-3 text-slate-400 dark:text-slate-200 text-left">Action</th>
       </tr>
     </thead>
@@ -61,6 +62,12 @@
           <td class="border-b border-slate-100 dark:border-slate-700 p-4 text-slate-500 dark:text-slate-400">
             <p>
               <%= @event.fixed %>
+            </p>
+          </td>
+
+          <td class="border-b border-slate-100 dark:border-slate-700 p-4 text-slate-500 dark:text-slate-400">
+            <p>
+              <%= fallback_value(@event, :result) %>
             </p>
           </td>
 
