--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -99,8 +99,10 @@
   </div>
   <div class="bg-slate-200 p-5 md:w-1/3 mt-12">
     <p class="underline text-lg mb-4">Aufgaben:</p>
-    <p>Erledigt: <%= Event.where(done: true).count%></p>
-    <p>Unerledigt: <%= Event.where(done: true).count%></p>
+    <%= link_to done_events_path, class: "underline" do %> 
+      <p>Erledigt: <%= Event.done.count%></p>
+    <% end %>
+    <p>Unerledigt: <%= Event.undone.not_blocking.future.count%></p>
   </div>
 <% elsif session[:current_view] == "this_week" %>
   <%= render "view_this_week", events: @events %>
