add flash message styling

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,16 +14,7 @@
   </head>
 
   <body class="mx-16 mb-16 mt-8">
-    <% if flash[:notice] %>
-      <div class="bg-orange-300 mb-8">
-        <%= flash[:notice] %>
-      </div>
-    <% elsif flash[:alert] || flash[:error] %>
-      <div class="bg-red-300 mb-8">
-        <%= flash[:notice] || flash[:error] %>
-      </div>
-    <% end %>
-
+    <%= render 'layouts/flash' %>
     <%= yield %>
   </body>
 </html>
