--- a/app/assets/stylesheets/application.tailwind.css
+++ b/app/assets/stylesheets/application.tailwind.css
@@ -1,25 +1,5 @@
-/*
- *= require_tree .
- *= require_self
- *= require custom
- */
-
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
-@import "./custom.css";
-
-.success-flash-message {
-  color: "#155724";
-  background-color: #d4edda;
-  border-color: #c3e6cb   
-}
-
-.flash {
-  position: relative;
-  padding: .75rem 1.25rem;
-  margin-bottom: 1rem;
-  border: 1px solid transparent;
-  border-radius: .25rem;
-}
+@import "custom";
