--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -82,8 +82,23 @@
           </td>
 
           <td class="border-b border-slate-100 dark:border-slate-700 p-4 text-slate-500 dark:text-slate-400">
-            <%= link_to "Eintrag editieren", edit_event_path(@event), class: "underline" %>
-            <%= button_to "Eintrag löschen", @event, method: :delete, class: "underline text-left" %>
+            <% unless @event.kind == "blocking" %>
+              <div class="flex justify-start">
+                <% unless @event.done_at? %>
+                  <%= form_with(model: @event, url: mark_as_done_path(@event), method: :patch) do |form| %>
+                    <%= button_tag(type: 'submit') do %>
+                      <span class="material-symbols-outlined text-green-600">check_circle</span>
+                    <% end %>
+                  <% end %>
+                <% end %>
+                <%= link_to edit_event_path(@event) do %>
+                  <span class="material-symbols-outlined text-blue-600">edit</span>
+                <% end %>
+                <%= link_to event_path(@event), data: { "turbo-method": :delete, "turbo-confirm": "Are you sure you want to delete this event?" } do %>
+                  <span class="material-symbols-outlined text-red-600">delete</span>
+                <% end %>
+              </div>
+            <% end %>
           </td>
         </div>
       </tr>
