extract to partial

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,6 +15,7 @@
 
   <body class="mx-16 mb-16 mt-8 test-class">
     <%= render 'layouts/flash' %>
+    <%= render 'layouts/navigation'%>
     <%= yield %>
   </body>
 </html>
