--- a/app/views/events/_view_this_week.html.erb
+++ b/app/views/events/_view_this_week.html.erb
@@ -1,17 +1,59 @@
-<div class="not-prose relative bg-slate-50 rounded-xl overflow-hidden dark:bg-slate-800/25">
+<div class="p-8 not-prose relative bg-slate-50 rounded-xl overflow-hidden dark:bg-slate-800/25">
+  <div class="pb-4 text-xl">KW <%= Date.today.strftime('%V') %></div>
+  <div class="grid grid-cols-7 gap-4 font-mono text-slate-700 text-sm text-center font-bold leading-6 bg-stripes-fuchsia rounded-lg">
+    <div class="p-4 rounded-lg shadow-lg <%= Date.today.monday? ? 'bg-fuchsia-500' : 'bg-white text-slate-700' %>">
+      <p class="text-lg pb-4"><%= Date.today.beginning_of_week.strftime("%A %d.%m") %></p>
+      <% if Date.today.beginning_of_week >= Date.today %>
+        <%= link_to new_event_path(date_from_today_view: Date.today.beginning_of_week), data: { turbo: false } do %>
+          <span class="material-symbols-outlined">add_box</span>
+        <% end %>
+      <% end %>
+      <% events.where(start_time: Date.today.beginning_of_week.beginning_of_day..Date.today.beginning_of_week.end_of_day).each do |event| %>
+        <div class="flex flex-col justify-start text-left <%= event.kind == 'blocking' ? 'p-1' : "p-1 mb-1 rounded-lg #{this_week_css_background_color_for(event)}" %>">
+          <div class="mr-2"><p class="<%= event.kind == 'blocking' ? 'text-black text-opacity-25' : '' %>"><%= event.start_time.strftime('%H:%M') %>-<%= event.end_time.strftime('%H:%M') %>:</p></div>
+          <div><p class="<%= event.kind == 'blocking' ? 'text-black text-opacity-25' : '' %>"><%= link_to event.title, event_path(event), class: "underline mr-2 break-all" %><% if event.done == true %>&#10004;<% end %></p></div>
+        </div>
+      <% end %>
+    </div>
+    <% [:tuesday, :wednesday, :thursday, :friday, :saturday, :sunday].each do |day| %>
+      <div class="p-4 rounded-lg shadow-lg <%= Date.today.strftime("%A").downcase.to_sym == day ? 'bg-fuchsia-500' : 'bg-white text-slate-700' %>">
+        <div class="flex space-x-2">
+          <p class="text-lg pb-4"><%= Date.today.beginning_of_week.next_occurring(day).strftime("%A %d.%m") %></p>
+          <% if Date.today.beginning_of_week.next_occurring(day) >= Date.today %>
+            <%= link_to new_event_path(date_from_today_view: Date.today.beginning_of_week.next_occurring(day)), data: { turbo: false } do %>
+              <span class="material-symbols-outlined">add_box</span>
+            <% end %>
+          <% end %>
+        </div>
+        <% events.where(start_time: Date.today.beginning_of_week.next_occurring(day).beginning_of_day..Date.today.beginning_of_week.next_occurring(day).end_of_day).each do |event| %>
+          <div class="flex flex-col justify-start text-left <%= event.kind == 'blocking' ? 'p-1' : "p-1 mb-1 rounded-lg #{this_week_css_background_color_for(event)}" %>">
+            <div class="mr-2"><p class="<%= event.kind == 'blocking' ? 'text-black text-opacity-25' : '' %>"><%= event.start_time.strftime('%H:%M') %>-<%= event.end_time.strftime('%H:%M') %>:</p></div>
+            <div><p class="<%= event.kind == 'blocking' ? 'text-black text-opacity-25' : '' %>"><%= link_to event.title, event_path(event), class: "underline mr-2 break-all" %><% if event.done == true %>&#10004;<% end %></p></div>
+          </div>
+        <% end %>
+      </div>
+    <% end %>
+  </div>
+</div>
+<div class="absolute inset-0 pointer-events-none border border-black/5 rounded-xl dark:border-white/5">
+</div>
+</div>
+
+<% (Date.today.cweek+1..52).each do |number_of_week| %>
+<div class="not-prose relative bg-slate-50 rounded-xl overflow-hidden dark:bg-slate-800/25 mt-4">
   <div style="background-position:10px 10px" class="absolute inset-0 bg-grid-slate-100 dark:bg-grid-slate-700/25">
   </div>
   <div class="relative rounded-xl overflow-auto p-8">
-    <div class="pb-4 text-xl">KW <%= Date.today.strftime('%V') %></div>
-    <div class="grid grid-cols-7 gap-4 font-mono text-slate-700 text-sm text-center font-bold leading-6 bg-stripes-fuchsia rounded-lg">
-      <div class="p-4 rounded-lg shadow-lg <%= Date.today.monday? ? 'bg-fuchsia-500' : 'bg-white text-slate-700' %>">
-        <p class="text-lg pb-4"><%= Date.today.beginning_of_week.strftime("%A %d.%m") %></p>
-        <% if Date.today.beginning_of_week >= Date.today %>
-          <%= link_to new_event_path(date_from_today_view: Date.today.beginning_of_week), data: { turbo: false } do %>
+    <div class="pb-4 text-xl">KW <%= number_of_week %></div>
+    <div class="grid grid-cols-7 gap-4 font-mono text-white text-sm text-center font-bold leading-6 bg-stripes-fuchsia rounded-lg text-slate-700">
+      <div class="p-4 rounded-lg shadow-lg bg-white text-slate-700">
+        <div class="flex space-x-2">
+          <p class="text-lg pb-4"><%= Date.commercial(Date.today.year, number_of_week, 1).beginning_of_week.strftime("%A %d.%m") %></p>
+          <%= link_to new_event_path(date_from_today_view: Date.commercial(Date.today.year, number_of_week, 1).beginning_of_week), data: { turbo: false } do %>
             <span class="material-symbols-outlined">add_box</span>
           <% end %>
-        <% end %>
-        <% events.where(start_time: Date.today.beginning_of_week.beginning_of_day..Date.today.beginning_of_week.end_of_day).each do |event| %>
+        </div>
+        <% events.where(start_time: Date.commercial(Date.today.year, number_of_week, 1).beginning_of_week.beginning_of_day..Date.commercial(Date.today.year, number_of_week, 1).beginning_of_week.end_of_day).each do |event| %>
           <div class="flex flex-col justify-start text-left <%= event.kind == 'blocking' ? 'p-1' : "p-1 mb-1 rounded-lg #{this_week_css_background_color_for(event)}" %>">
             <div class="mr-2"><p class="<%= event.kind == 'blocking' ? 'text-black text-opacity-25' : '' %>"><%= event.start_time.strftime('%H:%M') %>-<%= event.end_time.strftime('%H:%M') %>:</p></div>
             <div><p class="<%= event.kind == 'blocking' ? 'text-black text-opacity-25' : '' %>"><%= link_to event.title, event_path(event), class: "underline mr-2 break-all" %><% if event.done == true %>&#10004;<% end %></p></div>
@@ -19,16 +61,14 @@
         <% end %>
       </div>
       <% [:tuesday, :wednesday, :thursday, :friday, :saturday, :sunday].each do |day| %>
-        <div class="p-4 rounded-lg shadow-lg <%= Date.today.strftime("%A").downcase.to_sym == day ? 'bg-fuchsia-500' : 'bg-white text-slate-700' %>">
+        <div class="p-4 rounded-lg shadow-lg bg-white text-slate-700">
           <div class="flex space-x-2">
-            <p class="text-lg pb-4"><%= Date.today.beginning_of_week.next_occurring(day).strftime("%A %d.%m") %></p>
-            <% if Date.today.beginning_of_week.next_occurring(day) >= Date.today %>
-              <%= link_to new_event_path(date_from_today_view: Date.today.beginning_of_week.next_occurring(day)), data: { turbo: false } do %>
-                <span class="material-symbols-outlined">add_box</span>
-              <% end %>
+            <p class="text-lg pb-4"><%= Date.commercial(Date.today.year, number_of_week, 1).beginning_of_week.next_occurring(day).strftime("%A %d.%m") %></p>
+            <%= link_to new_event_path(date_from_today_view: Date.commercial(Date.today.year, number_of_week, 1).beginning_of_week.next_occurring(day)), data: { turbo: false } do %>
+              <span class="material-symbols-outlined">add_box</span>
             <% end %>
           </div>
-          <% events.where(start_time: Date.today.beginning_of_week.next_occurring(day).beginning_of_day..Date.today.beginning_of_week.next_occurring(day).end_of_day).each do |event| %>
+          <% events.where(start_time: Date.commercial(Date.today.year, number_of_week, 1).beginning_of_week.next_occurring(day).beginning_of_day..Date.commercial(Date.today.year, number_of_week, 1).beginning_of_week.next_occurring(day).end_of_day).each do |event| %>
             <div class="flex flex-col justify-start text-left <%= event.kind == 'blocking' ? 'p-1' : "p-1 mb-1 rounded-lg #{this_week_css_background_color_for(event)}" %>">
               <div class="mr-2"><p class="<%= event.kind == 'blocking' ? 'text-black text-opacity-25' : '' %>"><%= event.start_time.strftime('%H:%M') %>-<%= event.end_time.strftime('%H:%M') %>:</p></div>
               <div><p class="<%= event.kind == 'blocking' ? 'text-black text-opacity-25' : '' %>"><%= link_to event.title, event_path(event), class: "underline mr-2 break-all" %><% if event.done == true %>&#10004;<% end %></p></div>
@@ -39,49 +79,5 @@
     </div>
   </div>
   <div class="absolute inset-0 pointer-events-none border border-black/5 rounded-xl dark:border-white/5">
-  </div>
-</div>
-
-<% (Date.today.cweek+1..52).each do |number_of_week| %>
-  <div class="not-prose relative bg-slate-50 rounded-xl overflow-hidden dark:bg-slate-800/25 mt-4">
-    <div style="background-position:10px 10px" class="absolute inset-0 bg-grid-slate-100 dark:bg-grid-slate-700/25">
-    </div>
-    <div class="relative rounded-xl overflow-auto p-8">
-      <div class="pb-4 text-xl">KW <%= number_of_week %></div>
-      <div class="grid grid-cols-7 gap-4 font-mono text-white text-sm text-center font-bold leading-6 bg-stripes-fuchsia rounded-lg text-slate-700">
-        <div class="p-4 rounded-lg shadow-lg bg-white text-slate-700">
-          <div class="flex space-x-2">
-            <p class="text-lg pb-4"><%= Date.commercial(Date.today.year, number_of_week, 1).beginning_of_week.strftime("%A %d.%m") %></p>
-            <%= link_to new_event_path(date_from_today_view: Date.commercial(Date.today.year, number_of_week, 1).beginning_of_week), data: { turbo: false } do %>
-              <span class="material-symbols-outlined">add_box</span>
-            <% end %>
-          </div>
-          <% events.where(start_time: Date.commercial(Date.today.year, number_of_week, 1).beginning_of_week.beginning_of_day..Date.commercial(Date.today.year, number_of_week, 1).beginning_of_week.end_of_day).each do |event| %>
-            <div class="flex flex-col justify-start text-left <%= event.kind == 'blocking' ? 'p-1' : "p-1 mb-1 rounded-lg #{this_week_css_background_color_for(event)}" %>">
-              <div class="mr-2"><p class="<%= event.kind == 'blocking' ? 'text-black text-opacity-25' : '' %>"><%= event.start_time.strftime('%H:%M') %>-<%= event.end_time.strftime('%H:%M') %>:</p></div>
-              <div><p class="<%= event.kind == 'blocking' ? 'text-black text-opacity-25' : '' %>"><%= link_to event.title, event_path(event), class: "underline mr-2 break-all" %><% if event.done == true %>&#10004;<% end %></p></div>
-            </div>
-          <% end %>
-        </div>
-        <% [:tuesday, :wednesday, :thursday, :friday, :saturday, :sunday].each do |day| %>
-          <div class="p-4 rounded-lg shadow-lg bg-white text-slate-700">
-            <div class="flex space-x-2">
-              <p class="text-lg pb-4"><%= Date.commercial(Date.today.year, number_of_week, 1).beginning_of_week.next_occurring(day).strftime("%A %d.%m") %></p>
-              <%= link_to new_event_path(date_from_today_view: Date.commercial(Date.today.year, number_of_week, 1).beginning_of_week.next_occurring(day)), data: { turbo: false } do %>
-                <span class="material-symbols-outlined">add_box</span>
-              <% end %>
-            </div>
-            <% events.where(start_time: Date.commercial(Date.today.year, number_of_week, 1).beginning_of_week.next_occurring(day).beginning_of_day..Date.commercial(Date.today.year, number_of_week, 1).beginning_of_week.next_occurring(day).end_of_day).each do |event| %>
-              <div class="flex flex-col justify-start text-left <%= event.kind == 'blocking' ? 'p-1' : "p-1 mb-1 rounded-lg #{this_week_css_background_color_for(event)}" %>">
-                <div class="mr-2"><p class="<%= event.kind == 'blocking' ? 'text-black text-opacity-25' : '' %>"><%= event.start_time.strftime('%H:%M') %>-<%= event.end_time.strftime('%H:%M') %>:</p></div>
-                <div><p class="<%= event.kind == 'blocking' ? 'text-black text-opacity-25' : '' %>"><%= link_to event.title, event_path(event), class: "underline mr-2 break-all" %><% if event.done == true %>&#10004;<% end %></p></div>
-              </div>
-            <% end %>
-          </div>
-        <% end %>
-      </div>
-    </div>
-    <div class="absolute inset-0 pointer-events-none border border-black/5 rounded-xl dark:border-white/5">
-    </div>
   </div>
 <% end %>
