--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -1,4 +1,4 @@
-<div class="flex items-center justify-between flex-wrap mb-8">
+<div class="flex items-center justify-between flex-wrap mb-8 p-8 pt-4 bg-slate-50">
   <div class="items-center">
     <%= link_to events_path(current_view: "today"), data: { turbo: false } do %>
       <h1 class="font-bold text-4xl text-blue-500">Kalender</h1>
