--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,9 +13,11 @@
     <script src="https://unpkg.com/flowbite@1.3.3/dist/flowbite.js"></script>
   </head>
 
-  <body class="mx-16 mb-16 mt-8">
-    <%= render 'layouts/flash' %>
+  <body>
     <%= render 'layouts/navigation'%>
-    <%= yield %>
+    <div class="mx-16 mb-16 mt-8">
+      <%= render 'layouts/flash' %>
+      <%= yield %>
+    </div>
   </body>
 </html>
